cc_library(
    name = "ada",
    srcs = [
        "src/ada.cpp",
    ],
    hdrs = glob([
        "include/*.h",
        "include/ada/*.h",
        # todo: this can be included by every client of the library, but there is no better way
        # since .cpp files are included into each other.
        "src/*.cpp",
    ]),
    # todo: once .cpp files are not included, rather then polluting -I flags, src/ should
    # be dropped from hdrs and this replaced by `strip_include_prefix = "include"`
    includes = [
        "include",
        "include/ada",
    ],
    visibility = ["//visibility:public"],
)
