cc_library(
    name = "ada",
    srcs = glob([
        "src/*.cpp",
    ]),
    hdrs = glob([
        "include/*.h",
        "include/ada/*.h",
    ]),
    includes = [
        "include",
        "include/ada",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
